<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/register_movie_btn"
        android:layout_width="170dp"
        android:layout_height="180dp"
        android:background="@drawable/button_background"
        android:drawableBottom="@drawable/search"
        android:fontFamily="@font/carter_one"
        android:onClick="registerMovie"
        android:text="@string/register_movie_btn"
        android:textColor="#FD000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#72FFFFFF"
        app:backgroundTintMode="add"
        app:iconTint="#48FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/display_movies_btn"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />

    <Button
        android:id="@+id/display_movies_btn"
        android:layout_width="139dp"
        android:layout_height="210dp"
        android:background="@drawable/button_background"
        android:drawableBottom="@drawable/chair"
        android:fontFamily="@font/carter_one"
        android:onClick="displayMovie"
        android:text="@string/display_movies_btn"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#688BC34A"
        app:backgroundTintMode="add"
        app:iconTint="#1DFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/fav_btn"
        android:layout_width="161dp"
        android:layout_height="236dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_background"
        android:drawableBottom="@drawable/oscar"
        android:fontFamily="@font/carter_one"
        android:onClick="favourites"
        android:text="@string/favourites_btn"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#79D5F1B5"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_movie_btn" />

    <Button
        android:id="@+id/edit_movie_btn"
        android:layout_width="134dp"
        android:layout_height="159dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/button_background"
        android:drawableBottom="@drawable/cut"
        android:fontFamily="@font/carter_one"
        android:onClick="editMovies"
        android:text="@string/edit_movies_btn"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#6800BCD4"
        app:backgroundTintMode="add"
        app:iconTint="#51FF5722"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/fav_btn"
        app:layout_constraintTop_toBottomOf="@+id/display_movies_btn" />

    <Button
        android:id="@+id/rating_btn"
        android:layout_width="165dp"
        android:layout_height="157dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_background"
        android:drawableBottom="@drawable/edit"
        android:fontFamily="@font/carter_one"
        android:onClick="rating"
        android:text="@string/rating_btn"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#59FFEB3B"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fav_btn" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="138dp"
        android:layout_height="241dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="184dp"
        android:background="@drawable/button_background"
        android:drawableBottom="@drawable/movie"
        android:fontFamily="@font/carter_one"
        android:onClick="searchMovie"
        android:text="@string/search_btn"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#6ACD7C63"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toEndOf="@+id/rating_btn"
        app:layout_constraintTop_toBottomOf="@+id/edit_movie_btn"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>