<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/seasrch_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".SearchMoviesActivity">

    <EditText
        android:id="@+id/search_movie_view"
        android:layout_width="230dp"
        android:layout_height="46dp"
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:gravity="center"
        android:hint="@string/search_movie"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#AF9D9D"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="303dp"
        android:layout_height="501dp"
        android:background="@drawable/button_background_search"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lookup_btn">

        <ScrollView
            android:layout_width="290dp"
            android:layout_height="400dp"
            android:layout_marginTop="20dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button6">

            <LinearLayout
                android:id="@+id/displayResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/carter_one"
                    android:text="Title List"
                    android:textColor="#ECE3E3"
                    android:textSize="30sp" />

                <ScrollView
                    android:layout_width="290dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:background="#0FE6E6E8">

                    <LinearLayout
                        android:id="@+id/titleLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/carter_one"
                            android:gravity="center"
                            android:text="Result Not Found"
                            android:textColor="#48FFFFFF"
                            android:textSize="24sp" />
                    </LinearLayout>
                </ScrollView>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/carter_one"
                    android:text="Director List"
                    android:textColor="#ECE3E3"
                    android:textSize="30sp" />

                <ScrollView
                    android:layout_width="290dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:background="#0FE6E6E8">

                    <LinearLayout
                        android:id="@+id/directorLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/carter_one"
                            android:gravity="center"
                            android:text="Result Not Found"
                            android:textColor="#48FFFFFF"
                            android:textSize="24sp" />
                    </LinearLayout>
                </ScrollView>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/carter_one"
                    android:text="Actor/ Actress List"
                    android:textColor="#ECE3E3"
                    android:textSize="24sp" />

                <ScrollView
                    android:layout_width="290dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:background="#0FE6E6E8">

                    <LinearLayout
                        android:id="@+id/castLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/carter_one"
                            android:gravity="center"
                            android:text="Result Not Found"
                            android:textColor="#48FFFFFF"
                            android:textSize="24sp" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/lookup_btn"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/carter_one"
        android:gravity="center"
        android:onClick="Lookup"
        android:text="@string/lookup_btn_srch"
        android:textSize="14sp"
        app:backgroundTint="#6ACD7C63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_movie_view"
        app:layout_constraintVertical_bias="0.024" />

    <ImageView
        android:id="@+id/search_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/reg_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/movie" />

</androidx.constraintlayout.widget.ConstraintLayout>